# scribe.js

./: .assetsignore  .eslintrc.json  .gitignore  .gitmodules  .npmignore  README.md  build-deno-compile.sh  index.html  jsconfig.json  karma.conf.cjs  module.js  package-lock.json  package.json  scribe.js  vitest.config.js
cli/: cli.js  detectPDFType.js  extract.js  main.js  recognitionModels.js  render.js  require.js  scribe.js
cloud/: awsTextract.js
dev/: createRotationTextPdf.js  generate_fonts.sh  readme.Md
docs/: API.md  cli.md  guide.md  scribe_vs_tesseract.md
js/: addHighlights.js  canvasAdapter.js  clear.js  coordinates.js  debug.js  extractPDFText.js  extractTables.js  extractTextDir.js  fallbackFonts.js  fontContainerMain.js  fontEval.js  fontStatistics.js  fontSupp.js  generalWorkerMain.js  global.d.ts  modifyOCR.js  nudge.js  pdfWorkerMain.js  recognizeConvert.js
lib/: pako-inflate.js
mcp/: README.md  index.js  package.json  tools.js
mupdf/: libmupdf.js  mupdf-async.js  mupdf-worker.js
scribe-ui/: .gitignore  README.md  devFlags.js  global.d.ts  package-lock.json  package.json  viewer.js
scribe-ui/basic-viewer/tauri/: Cargo.toml  Dockerfile.build  build.sh  prepare-dist.sh  tauri.conf.json
scribe-ui/basic-viewer/tauri/capabilities/: default.json
scribe-ui/basic-viewer/tauri/src/: main.rs
scrollview-web/: draw.js  index.html  package-lock.json  package.json  readme.md
tess/: TessScheduler.js  TessWorker.js  constants.js  createJob.js  tesseract.esm.min.js  tesseract.esm.min.js.map  tesseract.min.js  tesseract.min.js.map  worker.min.js  (+1 more)
(+475 files in other folders)
